# PK-Battle-Simulator-Redux

./: CMakeLists.txt  CMakeSettings.json  PlayerOneSave.txt  PlayerTwoSave.txt  README.md
SavedParties/: Blue.txt  Lance.txt  Red.txt
src/: CMakeLists.txt  Game.h  GameEngine.cpp  GameEngine.h  main.cpp
src/battle/: BattleAIManager.cpp  BattleAIManager.h  BattleAction.h  BattleCalculations.cpp  BattleCalculations.h  BattleContext.cpp  BattleContext.h  BattleManager.cpp  BattleManager.h  BattleStatusManager.cpp  BattleStatusManager.h  MoveExecutor.cpp  MoveExecutor.h  PlayerDecisionOutcome.h  PostTurnEffectProcessor.cpp  PostTurnEffectProcessor.h  RandomEngine.cpp  RandomEngine.h  StageRatios.h  StatusEffectProcessor.cpp  StatusEffectProcessor.h  SwitchExecutor.cpp  SwitchExecutor.h  TurnManager.cpp  TurnManager.h  TurnProcessor.cpp  TurnProcessor.h  TurnUtils.cpp  TurnUtils.h  Typechart.h  WinChecker.cpp  WinChecker.h
src/common/: AppState.h  InputValidation.h  PartyEditResults.h
src/data/: Database.cpp  Database.h  InputValidation.h  LearnsetData.h  LoadEmbeddedLearnset.cpp  LoadEmbeddedMoves.cpp  LoadEmbeddedPokemon.cpp  Move.cpp  Move.h  MovedexConstexpr.h  PokedexConstexpr.h  Pokemon.cpp  Pokemon.h  StringToTypes.cpp  StringToTypes.h
src/entities/: AIPlayer.cpp  AIPlayer.h  BattlePokemon.cpp  BattlePokemon.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  PlayerDecisionOutcome.h  pokemonMove.cpp  pokemonMove.h
src/entities/ai strategies/: EasyAIStrategy.cpp  EasyAIStrategy.h  IAIStrategy.h
src/entities/controllers/: AIController.cpp  AIController.h  HumanControllerConsole.cpp  HumanControllerConsole.h  IPlayerController.h
src/entities/controllers/move scoring/: AIMoveClassifier.cpp  AIMoveClassifier.h  AIMoveScoring.cpp  AIMoveScoring.h  AIScoreTag.h  BasicScoring.cpp  BasicScoring.h  MediumMoveScoring.cpp  MediumMoveScoring.h  ScoringResultsStruct.h
src/entities/controllers/switch logic/: AISwitchLogic.cpp  AISwitchLogic.h
src/moves/: MoveEffectEnums.h  MoveEffects.cpp  MoveEffects.h  MoveHelpers.cpp  MoveHelpers.h  MoveRoutineDeps.h  MoveRoutines.cpp  MoveRoutines.h
src/save/: LoadParty.cpp  LoadParty.h  SaveParty.cpp  SaveParty.h
src/ui/: BattleAnnouncerHeadless.h  BattleAnnouncerText.cpp  BattleAnnouncerText.h  BattleTextMenu.cpp  BattleTextMenu.h  ConsoleTextSink.cpp  ConsoleTextSink.h  EffectivenessText.h  Menu.cpp  Menu.h  MoveResultsHeadless.h  MoveResultsText.cpp  MoveResultsText.h  StatusEffectHeadless.h  StatusEffectText.cpp  StatusEffectText.h
src/ui/interfaces/: IBattleAnnouncerUI.h  IBattleMenuUI.h  IMoveResultsUI.h  IStatusEffectUI.h  ITextSink.h
src/ui/views/: DatabaseTextView.cpp  DatabaseTextView.h  PokemonTextView.cpp  PokemonTextView.h  PokemonTextViews.cpp
